# nix-package-versions

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  ChangeLog.md  Dockerfile  Notes.md  README.md  SQL.md  build-linux.sh  cabal.project  cabal.project.freeze  devenv.nix  flake.nix  nix-package-versions.cabal  package.yaml  stack.yaml  utils.sh
.github/workflows/: ci.yml  main.yml
app/: Main.hs  Server.hs
scripts/: ghcid-exe  ghcid-lib  ghcid-test  server  test  update-database
src/: GitHub.hs  Lib.hs  Nix.hs  PackageDB.hs  Version.hs
src/App/: Logger.hs  Main.hs  Server.hs  Storage.hs  Update.hs
src/App/Storage/: JSON.hs  SQLite.hs
src/Control/Concurrent/: Extra.hs
src/Control/Monad/: LimitedConc.hs  Log2.hs  MonadLimitedConc.hs  NixEnv.hs  Revisions.hs  SQL.hs
src/Data/: Git.hs
src/Data/Time/: Period.hs
src/Nix/: Cache.hs  Revision.hs  Storage.hs  Versions.hs
src/Nix/Versions/: Database.hs  Discover.hs  Json.hs  Parsers.hs  Types.hs
src/Nix/Versions/Database/: Persistent.hs
src/System/: Timed.hs
test/: DatabaseSpec.hs  Spec.hs
