cabal-version: 1.12

name:           nix-package-versions
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/nix-package-versions#readme>
homepage:       https://github.com/githubuser/nix-package-versions#readme
bug-reports:    https://github.com/githubuser/nix-package-versions/issues
author:         Marcelo Lazaroni
maintainer:     example@example.com
copyright:      2020 Marcelo Lazaroni
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/githubuser/nix-package-versions

library
  exposed-modules:
      App.Storage
      App.Storage.SQLite
      App.Storage.JSON
      App.Update
      App.Logger
      Control.Monad.SQL
      Control.Concurrent.Extra
      Data.Git
      Data.Time.Period
      GitHub
      Nix
  other-modules:
      Paths_nix_package_versions
  hs-source-dirs:
      src
  default-extensions:
      OverloadedStrings
      NamedFieldPuns
      RecordWildCards
      DeriveGeneric
      DeriveAnyClass
      DerivingStrategies
      GeneralizedNewtypeDeriving
      LambdaCase
      TupleSections
  ghc-options: -Wall -Wno-partial-type-signatures
  build-depends:
      aeson
    , async
    , base >=4.7 && <5
    , blaze-html
    , blaze-markup
    , bytestring
    , concurrency
    , containers
    , directory
    , exceptions
    , extra
    , filepath
    , hashable
    , hspec
    , hspec-expectations
    , http-types
    , logging-effect
    , monad-control
    , mtl
    , optparse-applicative
    , parallel
    , parsec
    , prettyprinter
    , process
    , req
    , skylighting
    , sqlite-simple
    , stm
    , temporary
    , text
    , time
    , timeit
    , transformers
    , unix
    , unliftio
    , unordered-containers
    , wai
    , warp
  default-language: Haskell2010

executable nix-package-versions-exe
  main-is: Main.hs
  other-modules:
      Server
      Paths_nix_package_versions
  hs-source-dirs:
      app
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N -O2
  default-extensions:
      OverloadedStrings NamedFieldPuns
  build-depends:
      aeson
    , async
    , base >=4.7 && <5
    , blaze-html
    , blaze-markup
    , bytestring
    , concurrency
    , containers
    , directory
    , exceptions
    , filepath
    , hashable
    , hspec
    , hspec-expectations
    , http-types
    , logging-effect
    , monad-control
    , mtl
    , nix-package-versions
    , optparse-applicative
    , parallel
    , parsec
    , prettyprinter
    , process
    , req
    , skylighting
    , sqlite-simple
    , temporary
    , text
    , time
    , timeit
    , transformers
    , unix
    , unliftio
    , unordered-containers
    , wai
    , warp
  default-language: Haskell2010

test-suite nix-package-versions-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      DatabaseSpec
      Paths_nix_package_versions
  hs-source-dirs:
      test
  default-extensions:
      OverloadedStrings
      NamedFieldPuns
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      aeson
    , async
    , base >=4.7 && <5
    , blaze-html
    , blaze-markup
    , bytestring
    , concurrency
    , containers
    , directory
    , exceptions
    , filepath
    , hashable
    , hspec
    , hspec-expectations
    , http-types
    , logging-effect
    , monad-control
    , mtl
    , nix-package-versions
    , optparse-applicative
    , parallel
    , parsec
    , process
    , req
    , skylighting
    , sqlite-simple
    , temporary
    , text
    , time
    , timeit
    , transformers
    , unix
    , unliftio
    , unordered-containers
    , wai
    , warp
  default-language: Haskell2010
