cabal-version: 2.4

name:           nix-package-versions
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/nix-package-versions#readme>
homepage:       https://github.com/githubuser/nix-package-versions#readme
bug-reports:    https://github.com/githubuser/nix-package-versions/issues
author:         Marcelo Lazaroni
maintainer:     example@example.com
copyright:      2020 Marcelo Lazaroni
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/githubuser/nix-package-versions

library
  exposed-modules:
      App.Storage
      App.Storage.SQLite
      App.Storage.JSON
      App.Update
      App.Logger
      Control.Monad.SQL
      Control.Concurrent.Extra
      Data.Git
      Data.Time.Period
      GitHub
      Nix
  other-modules:
      Paths_nix_package_versions
  hs-source-dirs:
      src
  default-extensions:
      OverloadedStrings
      NamedFieldPuns
      RecordWildCards
      DeriveGeneric
      DeriveAnyClass
      DerivingStrategies
      GeneralizedNewtypeDeriving
      LambdaCase
      TupleSections
  ghc-options:
    -Wall
    -Wno-partial-type-signatures
    -Wunused-packages
    -fforce-recomp
  build-depends:
      aeson
    , async
    , base >=4.7 && <5
    , bytestring
    , concurrency
    , containers
    , directory
    , exceptions
    , extra
    , filepath
    , hashable
    , http-client
    , http-types
    , mtl
    , prettyprinter
    , process
    , req
    , sqlite-simple
    , stm
    , temporary
    , text
    , time
    , timeit
    , unordered-containers
  default-language: Haskell2010

executable nix-package-versions
  main-is: Main.hs
  other-modules:
      Server
      Paths_nix_package_versions
  hs-source-dirs:
      app
  ghc-options:
    -Wall
    -threaded
    -rtsopts
    -with-rtsopts=-N
    -O2
    -Wunused-packages
    -fforce-recomp
  default-extensions:
      OverloadedStrings NamedFieldPuns
  build-depends:
    base >=4.7 && <5
    , blaze-html
    , blaze-markup
    , bytestring
    , containers
    , filepath
    , http-types
    , nix-package-versions
    , optparse-applicative
    , prettyprinter
    , skylighting
    , text
    , time
    , wai
    , warp
  default-language: Haskell2010

test-suite nix-package-versions-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      DatabaseSpec
      Paths_nix_package_versions
  hs-source-dirs:
      test
  default-extensions:
      OverloadedStrings
      NamedFieldPuns
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N
    -Wunused-packages
    -fforce-recomp
  build-depends:
    base >=4.7 && <5
    , hspec
    , hspec-expectations
    , nix-package-versions
    , temporary
    , time
    , unordered-containers
  default-language: Haskell2010
